# cli-program-example

./: Cargo.toml  readme.md
src/: main.rs
tests/: integration_test.rs
