[package]
name = "catsay-1020"
version = "0.1.0"
edition = "2021"
authors = ["A. Talapov <abzh423@protonmail.com>"]
description = "Catsay is a simple, fast, and free cat-based ASCII art generator."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "2.0.4"
predicates = "2.1.1"